<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>no.rmz</groupId>
    <artifactId>rmatch-parent</artifactId>
    <version>1.1-SNAPSHOT</version>

    <packaging>pom</packaging>

    <name>Umbrella project for the regex matcher subprojects.</name>

    <description>Regular expression matcher</description>
    <organization>
        <name>Rmz</name>
        <url>https://www.rmz.no/</url>
    </organization>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>rmz</id>
            <name>Bjørn Remseth</name>
            <email>rmz@rmz.no</email>
        </developer>
    </developers>

    <properties>
        <maven.plugin.validation>DEFAULT</maven.plugin.validation>
        <java.version>21</java.version>
        <findbugs.version>1.3.2</findbugs.version>
        <guava.version>33.0.0-jre</guava.version>
        <guice.version>3.0</guice.version>
        <junit-jupiter.version>5.9.3</junit-jupiter.version>
        <junit.version>4.13.2</junit.version>
        <mavenCheckstylePlugin.version>3.3.1</mavenCheckstylePlugin.version>
        <mavenCoberturaPlugin.version>2.5.1</mavenCoberturaPlugin.version>
        <mavenCompilerPlugin.version>3.12.1</mavenCompilerPlugin.version>
        <mavenDependencyPlugin.version>3.6.0</mavenDependencyPlugin.version>
        <mavenFindbugsPlugin.version>3.0.5</mavenFindbugsPlugin.version>
        <mavenJarPlugin.version>3.3.0</mavenJarPlugin.version>
        <mavenReleasePlugin.version>3.0.1</mavenReleasePlugin.version>
        <mavenSourcePlugin.version>3.3.0</mavenSourcePlugin.version>
        <mavenSurefire.version>3.2.3</mavenSurefire.version>
        <mockitoCore.version>5.8.0</mockitoCore.version>
        <mockitoJunitJupiter.version>5.10.0</mockitoJunitJupiter.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>


    <dependencies>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockitoCore.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.8.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${mockitoJunitJupiter.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>net.sourceforge.findbugs</groupId>
            <artifactId>annotations</artifactId>
            <version>${findbugs.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>



    </dependencies>


    <modules>
        <module>rmatch</module>
        <module>rmatch-tester</module>
    </modules>
    <scm>
        <connection>scm:git:git@github.com:la3lma/rmatch.git</connection>
        <url>scm:git:git@github.com:la3lma/rmatch.git</url>
        <developerConnection>scm:git:git@github.com:la3lma/rmatch.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

</project>
